--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Blossom Lemon # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Always a learner 
+  Keep calm and always be a learner. 
   <br><br>
-  #Second description 
+  Which I believe is that Natural is an arrow passing through a multitude of randoms.
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  # <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
