--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Blossom Lemon # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/IMG_0861.JPG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Keep calm and always be a learner. 
   <br><br>
