--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Blossom Lemon # your name (or website title) here
-logo: "/images/IMG_0861.JPG?raw=true" # your photo (or logo) here
+logo: "/images/IMG_0861.JPG?" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Keep calm and always be a learner. 
   <br><br>
-  Which I believe is that Natural is an arrow passing through a multitude of randoms.
+  I believe that Natural is an arrow passing through a multitude of randoms. And so I'm learning Data.
   <br><br>
   # <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
