--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Blossom Lemon # your name (or website title) here
-logo: "/images/IMG_0861.JPG?" # your photo (or logo) here
-description: > # your text below (remove <br> elements if you don't need line breaks)
+title: Blossom Lemon
+logo: "/images/IMG_0861.JPG?" 
+description: > 
   Keep calm and always be a learner. 
   <br><br>
   I believe that Natural is an arrow passing through a multitude of randoms. And so I'm learning Data.
@@ -8,4 +8,4 @@ description: > # your text below (remove <br> elements if you don't need line br
   
   
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+
